--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AudioPinEnrollmentActivity"
+        <activity android:name="com.test.test.verification.AudioPinVerificationActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -22,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AudioPinVerificationActivity"
+        <activity android:name="com.test.test.enrollment.AudioPinEnrollmentActivity"
             android:screenOrientation="portrait">
         </activity>
     </application>
